@@ -25,7 +25,9 @@ Write tabs for regular guitar.
 Write tabs for bass guitar.
 .IP "-o \fIoutput-file\fP"
 Filename of the ASCII file that should be generated. If this is not 
-specified, the ASCII file will be written to stdout.
+specified, the ASCII output will be written to a file named after the input 
+file but with the extension changed to ".txt". 
+Specify "-" for standard output.
 .SH "SEE ALSO"
 .BR http://jelmer.vernstok.nl/
 .PP
