@@ -25,7 +25,9 @@ Write tabs for regular guitar.
 Write tabs for bass guitar.
 .IP "-o \fIoutput-file\fP"
 Filename of the LilyPond file that should be generated. If this is not 
-specified, the Lilypond file will be written to stdout.
+specified, the Lilypond output will be written to the a file with the 
+same name as the input file but with the extension changed to .ly.
+Specify "-" for standard output.
 .IP "-s \fInum_sections\fP"
 Write Lilypond data for a limited number of sections. Specify 0 for all.
 .SH "SEE ALSO"
