@@ -19,6 +19,7 @@
 #include <stdio.h>
 #include <errno.h>
 #include <popt.h>
+#include <string.h>
 #include "ptb.h"
 
 char *note_names[12] = {
@@ -316,7 +317,7 @@ int ly_write_lyrics(FILE *out, struct ptbf *ret)
 
 int main(int argc, const char **argv) 
 {
-	FILE *out = stdout;
+	FILE *out;
 	int have_lyrics;
 	struct ptbf *ret;
 	int debugging = 0;
@@ -325,6 +326,7 @@ int main(int argc, const char **argv)
 	int c, i = 0;
 	int version = 0;
 	int num_sections = 0;
+	const char *input;
 	char *output = NULL;
 	poptContext pc;
 	struct poptOption options[] = {
@@ -356,20 +358,33 @@ int main(int argc, const char **argv)
 		poptPrintUsage(pc, stderr, 0);
 		return -1;
 	}
-	ret = ptb_read_file(poptGetArg(pc));
+	input = poptGetArg(pc);
+	ret = ptb_read_file(input);
 	
 	if(!ret) {
 		perror("Read error: ");
 		return -1;
 	} 
 
-	if(output) {
+	if(!output) {
+		int baselength = strlen(input);
+		if (!strcmp(input + strlen(input) - 4, ".ptb")) {
+			baselength -= 4;
+		}
+		output = malloc(baselength + 5);
+		strncpy(output, input, baselength);
+		strcpy(output + baselength, ".ly");
+	}
+
+	if (!strcmp(output, "-")) {
+		out = stdout; 
+	} else {
 		out = fopen(output, "w+");
 		if(!out) {
 			perror("open");
 			return -1;
 		}
-	} 
+	}
 	
 	fprintf(out, "%% Generated by ptb2ly (C) 2004 Jelmer Vernooij <jelmer@samba.org>\n");
 	fprintf(out, "%% See http://jelmer.vernstok.nl/oss/ptabtools/ for more info\n\n");
