@@ -23,7 +23,9 @@ Run in debug mode. This will generate a lot of output to stderr.
 Generate MusicXML output.
 .IP "-o \fIoutput-file\fP"
 Filename of the XML file that should be generated. If this is not 
-specified, the XML file will be written to stdout.
+specified, the XML output will be written to a file named after the input 
+file with the extension replaced with ".xml".
+Specify "-" to write to stdout.
 .SH "SEE ALSO"
 .BR http://jelmer.vernstok.nl/
 .PP
